# bulk-checksum

./: .gitignore  README.md  output.json  output.txt  pyproject.toml
bulk_checksum/: compare.py  generate.py
test/: test_compare.py
test/data/: checksum_destination.json  checksum_source.json
